sass/index.scss
@import "colors";
@import "core-layout";

section.grid {
  @include centered-column;
}

section.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
}

section.hero {
  padding: 1em 0;
  background-color: #d4e8f6;
  background-image: url("../images/FocusRetreat-topimage-1600.jpg");
  background-size: cover;
  background-position: center;

  img {
    width: unquote("min(450px, 95vw)");
  }

  h2 {
    margin-top: 40px;
    margin-bottom: 60px;
    background: rgba(255, 255, 255, 0.6);
    line-height: 1.1;
    width: 100%;
    text-align: center;
    padding: 0.2em;
  }
}

section.hosts {
  img.hosts {
    display: block;
    @media (min-width: $breakpoint) {
      display: inline;
      float: right;
      margin-left: 1em;
      max-width: 50%;
    }
  }
}

section.about-our-center {
  img {
    display: block;
    margin: auto;
    @media (min-width: $breakpoint) {
      display: inline;
      float: right;
      margin-left: 1em;
      max-width: 50%;
    }
  }
}

section.offer {
  img {
    display: block;
    margin: auto;
    @media (min-width: $breakpoint) {
      display: inline;
      float: left;
      margin-right: 2em;
      max-width: 50%;
    }
  }
}

.imagine {
  h2 {
    color: #01286e;
  }
}

.phone {
  font-size: 150%;
}

.bg-brick {
  background-color: #70441b;
  color: white;
}

.bg-sage {
  background-color: #a9a486;
  color: #222;
}

.bg-green {
  background-color: green;
  color: yellow;
}

.bg-pine {
  background-color: #344c2c;
  color: white;
}

.bg-dark-blue {
  background-color: $brand-dark-blue;
  color: white;
}

.bg-light-blue {
  background-color: $brand-light-blue;
  color: white;
}
.bg-honey {
  background-color: #e7c082;
  color: #222;
}

.bg-charcoal {
  background: #515151;
  color: white;
}

.callout-text {
  text-align: center;
  margin: 0;
  padding: 3rem 0;
  line-height: 1.1;
}

.bg-img-hills {
  text-shadow: 0px 0px 10px #ffffff;
  background: url("../images/hills2.jpg") rgba(255, 255, 255, 0.4);
  background-size: cover;
  background-blend-mode: screen;
}

.bg-img-forest {
  color: white;
  background: url("../images/background-pineforest.jpg") rgba(0, 33, 105, 0.2);
  background-size: cover;
  background-blend-mode: overlay;
}

section.bg-img-sunset {
  background: url("../images/sunset.jpg") $brand-honey-yellow;
  background-size: cover;
  background-position: center;
  padding: unquote("min(150px, 100vw)");
}

.programs {
  font-size: 150%;
  line-height: 150%;
  margin-bottom: 2em;
}

.social {
  a,
  a:visited,
  a:hover {
    color: white;
    text-decoration: none;
  }
  img,
  svg {
    width: 32px;
    height: 32px;
    vertical-align: middle;
  }
}

